IJPL-156498 [editor]: add API allowing inserting virtual line breaks in editor backed by custom soft-wraps
GitOrigin-RevId: d2d7ba94a6a35fce5bfa990a854bc0862a209e55